--- a/stile.css
+++ b/stile.css
@@ -1,366 +1,481 @@
 /* TAB index */
 
-  .bott{
-    width:18%;
-    height:25%;
-    margin-top:2%;
-    margin-left: 2%;
-    border-color:transparent;
-    border-radius:40px;
-    box-shadow:0px 0px 15px #4646fe;
-    font-size: 250%;
-    font-family:'Courier New';
-    background-color:#0606fb;
-    cursor:pointer;
-    color:#FFFFFF;
-  }
-  
-  .bott:hover{
-    width:20%;
-  }
-  
-  .schermata {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: url(image/fondale.png) no-repeat center top;
-    position: fixed; 
-    z-index: -1;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
-  
-  .titolo{
-    font-family:'Courier New';
-    color:#ffffff;
-    font-size:500%;
-    font-weight:bold;
-    text-align:center;
-    text-transform:uppercase;
-    text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
-    margin-top: 2%;
-  }
-  
-  /* TAB Gioco */
-  
-  .schermata_2 {
-    width: 100%;
-    height: 100%;
-    background: url(image/fondale_2.png);
-    position: fixed; 
-  }
-  
-  .titoloselezione{
-    font-family:'Courier New';
-    color:#fff;
-    font-size:300%;
-    font-weight:normal;
-    text-align:center;
-    text-transform:uppercase;
-    text-shadow: 1px 2px 5px rgba(65, 65, 240, 0.897);
-    margin-top: 1.5%;
-  }
-  
-  #container{
-    width:100%;
-    height: 180%;
-  }
-  
-  .nnavselezione{
-    font-family:'Courier New';
-    font-size:112%;
-    color:#fff;
-    text-align:center;
-    font-weight: bold;
-    height:6%
-  }
-  
-  .naveselezione{
-    width:19.7%;
-    height: 43%;
-    background: linear-gradient(#0b4476, #074365);
-    float:left;
-    border-top: 1px solid #000000;
-    border-bottom: 1px solid #000000;
-    border-left:1px solid #000000;
-    border-right: 1px solid #000000;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
-  }
-  
-  .imgselezione{
-    width:100%;
-    height:30%;
-    margin:5% auto 0 auto;
-    text-align:center;
-  }
-  
-  .spazim{
-    width:100%;
-    height:100%;
-  }
-  
-  .infos{
-    width: 100%;
-    height: 40%;
-  }
-  
-  .descn{
-    font-size:100%;
-    height:100%;
-    overflow:auto;
-    width:100%;
-    font-family:"Courier New";
-    color: white;
-    text-align:center;
-  }
-  
-  .button{
-    width:50%;
-    height:30%;
-    margin-left:25%;
-    -moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -ms-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-  }
-  
-  .button:hover{
-    width:55%;
-  }
-  
-  .bott1{
-    width:100%;
-    height:100%;
-    border-color:transparent;
-    border-radius:40px;
-    font-size:128%;
-    cursor:pointer;
-    text-align: center;
-    font-family:'Courier New';
-    background-color:rgb(0, 0, 0);
-    color:#FFFFFF;
-  }
-  
-  /*  TAB Gameplay */
-  
-  .esit{
-    font-weight:bold;
-    text-align:center;
-    font-size:500%;
-    color:white;
-  }
-  
-  #countdown {
-    text-align:center;
-    font-family:'Courier New';
-    color: #ffffff;
-    font-size: 350%;
-    width: 100%;
-    margin: 0;
-  }
-  
-  #table1{
-    width:100%;
-    height:100%;
-    border:1px solid black;
-    border-collapse: collapse;
-  }
-  
-  .desc{
-    font-size:120%;
-    margin-top:8%;
-    overflow:auto;
-    width:100%;
-    font-family:"Courier New";
-    color: white;
-    text-align:center;
-  }
-  
-   #abilita{
-      text-align:center;
-      margin-top:10%;
-      width:100%;
-      height:100%;
-    }
-  
-  .parametri {
-      width:20%;
-      margin-right:3%;
-      float: right;
-      border:1px solid rgb(255, 255, 255);
-      height:95%;
-    }
-  
-  .health {
-    margin-top: 1%;
-    position: relative;
-    width: 100%;
-    height: 30px;
-    background: #b7c0b9;
-    border-radius: 5px;
-    overflow: hidden;
-  }
-  
-  .health__fill {
-    width: 0%;
-    height: 100%;
-    background: #1eea68;
-    transition: all 0.2s;
-  }
-  
-  .health__text {
-    position: absolute;
-    top: 50%;
-    right: 5px;
-    transform: translateY(-50%);
-    font: bold 14px "Quicksand", sans-serif;
-    color: #ffffff;
-  }
-  
-  .para{
-    border: solid 1px white;
-    margin-top: 7%;
-    margin-left: 17%;
-    text-align: center;
-    font-family:'Courier New';
-    font-size:100%;
-    width:70%;
-    color:#FFFFFF;
-  }
-    
-  /* TAB Comandi */
-  
-  .comandi {
-    width: 93%;
-    height: 93%;
-    top: 6%;
-    left: 4%;
-    position: fixed; 
-  }
-  
-  /* TAB Regole */
-  
-    .titoloregole{
-      font-family:'Courier New';
-      color:#ffffff;
-      font-size:500%;
-      font-weight:bold;
-      text-align:center;
-      text-transform:uppercase;
-      text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
-      margin-top: 0%;
-    }
-  
-    .regole{
-    font-size:200%;
-    overflow:auto;
-    width:99%;
-    height:75%;
-    margin-top: 0%;
-    font-family:"Courier New";
-    color: white;
-    text-align:justify;
-    overflow-y: scroll;
-  }
-  
-  /* Fine*/
-  
-  .bott2{
-    border:1px solid black;
-    margin-left:40%;
-    width:20%;
-    height:25%;
-    border-color:transparent;
-    border-radius:40px;
-    box-shadow:0px 0px 15px #4646fe;
-    font-size: 250%;
-    font-family:'Courier New';
-    background-color:#0606fb;
-    cursor:pointer;
-    color:#FFFFFF;
-  }
-  
-  .schermata_f{
-    width:100%;
-    height:100%;
-    text-align: center;
-    font-size: 250%;
-    font-family:'Courier New';
-    color:#FFFFFF;
-  }
-  
-  .coppa{
-    
-    margin-top: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-  }
-  
-  /* Generate */
-  
-  .campogioco{
-  border:1px solid black;
+.bott {
+  width: 18%;
+  height: 25%;
+  margin-top: 2%;
+  margin-left: 2%;
+  border-color: transparent;
+  border-radius: 40px;
+  box-shadow: 0px 0px 15px #4646fe;
+  font-size: 250%;
+  font-family: "Courier New";
+  background-color: #0606fb;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.bott:hover {
+  width: 20%;
+}
+
+.schermata {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url(image/fondale.png) no-repeat center top;
+  position: fixed;
+  z-index: -1;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.titolo {
+  font-family: "Courier New";
+  color: #ffffff;
+  font-size: 500%;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+  margin-top: 2%;
+}
+
+/* TAB Gioco */
+
+.schermata_2 {
+  width: 100%;
+  height: 100%;
+  background: url(image/fondale_2.png);
+  position: fixed;
+}
+
+.titoloselezione {
+  font-family: "Courier New";
+  color: #fff;
+  font-size: 300%;
+  font-weight: normal;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 1px 2px 5px rgba(65, 65, 240, 0.897);
+  margin-top: 1.5%;
+}
+
+#container {
+  width: 100%;
+  height: 180%;
+}
+
+.nnavselezione {
+  font-family: "Courier New";
+  font-size: 112%;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  height: 6%;
+}
+
+.naveselezione {
+  width: 19.7%;
+  height: 43%;
+  background: linear-gradient(#0b4476, #074365);
+  float: left;
+  border-top: 1px solid #000000;
+  border-bottom: 1px solid #000000;
+  border-left: 1px solid #000000;
+  border-right: 1px solid #000000;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+}
+
+.imgselezione {
+  width: 100%;
+  height: 30%;
+  margin: 5% auto 0 auto;
+  text-align: center;
+}
+
+.spazim {
+  width: 100%;
+  height: 100%;
+}
+
+.infos {
+  width: 100%;
+  height: 40%;
+}
+
+.descn {
+  font-size: 100%;
+  height: 100%;
+  overflow: auto;
+  width: 100%;
+  font-family: "Courier New";
+  color: white;
+  text-align: center;
+}
+
+.button {
+  width: 50%;
+  height: 30%;
+  margin-left: 25%;
+  -moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.button:hover {
+  width: 55%;
+}
+
+.bott1 {
+  width: 100%;
+  height: 100%;
+  border-color: transparent;
+  border-radius: 40px;
+  font-size: 128%;
+  cursor: pointer;
+  text-align: center;
+  font-family: "Courier New";
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+}
+
+/*  TAB Gameplay */
+
+.esit {
+  font-weight: bold;
+  text-align: center;
+  font-size: 500%;
+  color: white;
+}
+
+#countdown {
+  text-align: center;
+  font-family: "Courier New";
+  color: #ffffff;
+  font-size: 350%;
+  width: 100%;
+  margin: 0;
+}
+
+#table1 {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+.desc {
+  font-size: 120%;
+  margin-top: 8%;
+  overflow: auto;
+  width: 100%;
+  font-family: "Courier New";
+  color: white;
+  text-align: center;
+}
+
+#abilita {
+  text-align: center;
+  margin-top: 10%;
+  width: 100%;
+  height: 100%;
+}
+
+.parametri {
+  width: 20%;
+  margin-right: 3%;
+  float: right;
+  border: 1px solid rgb(255, 255, 255);
+  height: 95%;
+}
+
+.health {
+  margin-top: 1%;
+  position: relative;
+  width: 100%;
+  height: 30px;
+  background: #b7c0b9;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.health__fill {
+  width: 0%;
+  height: 100%;
+  background: #1eea68;
+  transition: all 0.2s;
+}
+
+.health__text {
+  position: absolute;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+  font: bold 14px "Quicksand", sans-serif;
+  color: #ffffff;
+}
+
+.para {
+  border: solid 1px white;
+  margin-top: 7%;
+  margin-left: 17%;
+  text-align: center;
+  font-family: "Courier New";
+  font-size: 100%;
+  width: 70%;
+  color: #ffffff;
+}
+
+/* TAB Comandi */
+
+.comandi {
+  width: 93%;
+  height: 93%;
+  top: 6%;
+  left: 4%;
+  position: fixed;
+}
+
+/* TAB Regole */
+
+.titoloregole {
+  font-family: "Courier New";
+  color: #ffffff;
+  font-size: 500%;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+  margin-top: 0%;
+}
+
+.regole {
+  font-size: 200%;
+  overflow: auto;
+  width: 99%;
+  height: 75%;
+  margin-top: 0%;
+  font-family: "Courier New";
+  color: white;
+  text-align: justify;
+  overflow-y: scroll;
+}
+
+/* Fine*/
+
+.bott2 {
+  border: 1px solid black;
+  margin-left: 40%;
+  width: 20%;
+  height: 25%;
+  border-color: transparent;
+  border-radius: 40px;
+  box-shadow: 0px 0px 15px #4646fe;
+  font-size: 250%;
+  font-family: "Courier New";
+  background-color: #0606fb;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.schermata_f {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 250%;
+  font-family: "Courier New";
+  color: #ffffff;
+}
+
+.coppa {
+  margin-top: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+/* Generate */
+
+.campogioco {
+  border: 1px solid black;
   table-layout: fixed;
-  width:2%;
-  height:2%;
-  font-size:80%;
-  color:rgb(38, 211, 211);
-  }
-  
-  .comand{
+  width: 2%;
+  height: 2%;
+  font-size: 80%;
+  color: rgb(38, 211, 211);
+}
+
+.comand {
   margin-top: 15%;
   margin-right: 1%;
   text-align: left;
-  }
-  
-  .casella{
+}
+
+.casella {
   display: block;
-  width:100%;
-  height:100%;
-  }
-  
-  #campo{
-  min-height:20%;
-  max-height:100%;
-  width:48%;
+  width: 100%;
+  height: 100%;
+}
+
+#campo {
+  min-height: 20%;
+  max-height: 100%;
+  width: 48%;
   height: 91%;
   margin-left: 20%;
-  }
-  
-/*bottoni indietro*/
-  .indietro{
-    width:8%;
-    height:20%;
-    margin-top:0;
-    margin-left:0;
-    font-size: 150%;
-    color: #ffffff;
-    cursor:pointer;
-    background-color: #0606fb;
-  
-    
-  }
-  .indietro1{
-    width:8%;
-    height:5%;
-    margin-top:0;
-    margin-left:0;
-    font-size: 150%;
-    color: #ffffff;
-    cursor:pointer;
-    background-color: #0606fb;
-  }
+}
 
-.titolof{
-    font-family:'Courier New';
-    color:#ffffff;
-    font-size:200%;
-    font-weight:bold;
-    text-align:center;
-    text-transform:uppercase;
-    text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
-  }
+/*bottoni indietro*/
+.indietro {
+  width: 8%;
+  height: 20%;
+  margin-top: 0;
+  margin-left: 0;
+  font-size: 150%;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #0606fb;
+}
+.indietro1 {
+  width: 8%;
+  height: 5%;
+  margin-top: 0;
+  margin-left: 0;
+  font-size: 150%;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #0606fb;
+}
+
+.titolof {
+  font-family: "Courier New";
+  color: #ffffff;
+  font-size: 200%;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+}
+
+/*login e registrazione*/
+.schermataLogin {
+  background: #0b4476;
+  font-family: "Courier New";
+}
+
+.titoloLogin {
+  text-align: center;
+  font-family: "Courier New";
+}
+#login {
+  background-color: #fffff0;
+  font-family: "Courier New";
+  font-size: large;
+  margin: auto;
+  margin-top: 10%;
+  width: 20%;
+  height: 40%;
+  outline: groove 4px black;
+  border-radius: 10px;
+  text-align: center;
+}
+#labelForm {
+  margin: auto;
+  width: 100%;
+  height: 40%;
+  outline: groove 4px black;
+}
+
+a:link,
+a:visited {
+  background-color: #2079c7;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+.transizione {
+  -webkit-transition: background-color 0.5s linear;
+  -moz-transition: background-color 0.5s linear;
+  -ms-transition: background-color 0.5s linear;
+  -o-transition: background-color 0.5s linear;
+  transition: background-color 0.5s linear;
+}
+
+a:hover,
+a:active {
+  background-color: #15538a;
+}
+
+input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+}
+
+input:focus {
+  border: 3px solid #555;
+}
+
+.bottoneREgistrazione {
+  width: 50%;
+  height: 15%;
+  margin-left: 25%;
+  -moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+.bottoneREgistrazione:hover {
+  width: 55%;
+}
+
+/*tabella classifica*/
+
+table {
+  background-color: #fffff0;
+  border: solid #070606;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: large;
+  width: 40%;
+}
+
+th {
+  background-color: #070606;
+  color: #fffff0;
+}
+tr,
+td {
+  border-bottom: solid #070606;
+  border-top: solid #070606;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.titoloBenvenuto {
+  font-family: "Courier New";
+  color: #ffffff;
+  font-size: 100%;
+  font-weight: bold;
+  text-align: left;
+  text-transform: uppercase;
+  text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+  margin-top: 2%;
+}
